--- a/style.css
+++ b/style.css
@@ -91,13 +91,8 @@
 .footerlink:hover{
   text-decoration: none;
 }
-.headers{
-  z-index: 1;
-  
-}
-#header{
-  transition: 0.5s;
-}
+
+
 .btn noHover{
   text-decoration: black;
 }
@@ -106,7 +101,7 @@
 }
 #hnav{
   background-attachment: fixed;
-  transition: 0.5s;
+  
   z-index: 1000;
 }
 .home-link{
@@ -122,6 +117,18 @@
 .socials-header{
   margin-top: -3em;
 }
+header{
+  
+  width: inherit;
+  max-width: inherit;
+  z-index: 1;
+  position: fixed ;
+}
+body{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
 #myBtn {
   display: none;
   position: fixed;
@@ -131,15 +138,14 @@
   font-size: 18px;
   border: none;
   outline: none;
-  background-color: rgb(95, 236, 128);
+  background-color: rgb(152, 228, 162);
   color: white;
   cursor: pointer;
   padding: 15px;
   border-radius: 4px;
-  height: 50px;
-  width: 45px;
 }
-
 #myBtn:hover {
   background-color: #555;
 }
+
+
